fix answer button on mobile

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -100,6 +100,8 @@ button.btn {
   padding: 5px 5px;
   border: 5px solid;
   cursor: pointer;
+  position: relative;
+  z-index: 1
 }
 .next-btn,
 .start-btn {
